full-moon/tests/cfxlua_cases/fail/parser/bitwise_or_assignment_operator/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cfxlua_cases/fail/parser/bitwise_or_assignment_operator
---
error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:1
  │
2 │ 1 |= num
  │ ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:3:1
  │
3 │ 
  │ ^
